--- a/assets/css/tailwind.css
+++ b/assets/css/tailwind.css
@@ -25,9 +25,11 @@
     --accent: 240 4.8% 95.9%;
     --accent-foreground: 240 5.9% 10%;
 
-    --destructive: 0 84.2% 60.2%;
-    --destructive-foreground: 0 0% 98%;
-
+    /* --destructive: 0 84.2% 60.2%;
+    --destructive-foreground: 0 0% 98%; */
+    --destructive: 339 100% 46%;
+    --destructive-foreground: 0 0% 98%;    
+    
     --border: 240 5.9% 90%;
     --input: 240 5.9% 90%;
     --ring: 240 5.9% 10%;
@@ -56,8 +58,10 @@
     --accent: 240 3.7% 15.9%;
     --accent-foreground: 0 0% 98%;
 
-    --destructive: 0 62.8% 30.6%;
-    --destructive-foreground: 0 0% 98%;
+    /* --destructive: 0 62.8% 30.6%;
+    --destructive-foreground: 0 0% 98%; */
+    --destructive: 339 100% 46%;
+    --destructive-foreground: 0 0% 98%;    
 
     --border: 240 3.7% 15.9%;
     --input: 240 3.7% 15.9%;
