--- a/assets/css/tailwind.css
+++ b/assets/css/tailwind.css
@@ -74,6 +74,6 @@
     @apply border-border;
   }
   body {
-    @apply bg-background text-foreground font-[Inter];
+    @apply bg-background text-foreground font-[Oxanium];
   }
 }
